# sc-mfd

./: .gitignore  README.md  pyproject.toml  start.sh
config/: palettes.json
config/mfds/: Aciedo.json  Aegis.json  Anvil.json  Aopoa.json  Argo.json  Banu.json  Consolidated.json  Crusader.json  Drake.json  Esperia.json  FPS.json  Gatac.json  Greycat.json  Greys.json  Kruger.json  MISC.json  Main.json  Mirai.json  Origin.json  RSI.json  Shubin.json  Tumbril.json  Turret.json
scmfd/: art.py  cli.py  inject.py  keymap.py  model.py  server.py  site.py
