[project]
name = "scmfd"
version = "0.1.0"
description = "Data-driven touchscreen MFD for Star Citizen, driven over uinput."
requires-python = ">=3.10"
dependencies = ["evdev>=1.6", "pillow>=10"]

[project.scripts]
scmfd = "scmfd.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scmfd"]
